branch wirh conflict

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>index.html</title>
   </head>
   <body>
-    this is sample programe
-    added one in branch
+    this is sample demo
+    my best prngm
   </body>
 </html>
