--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>index.html</title>
   </head>
   <body>
-    this is sample demo
-    my best prngm
+    this is my conflict
+    in my branch
   </body>
 </html>
